--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -7,7 +7,7 @@
   background-color: $highlight-color;
 
   transition: all 2s ease-in-out;
-  transform: translateY(-110%);
+  transform: translateX(-110%);
 
   &__list {
     margin: #{$logo-height + 50px} 50px;
